# chython-rxnmap

./: .gitignore  AGENTS.md  DATASET_USAGE.md  README.md  change_report.md  changes  data.smi  datasets.py  nora.py  nora_eval.py  nora_optuna.py  paper.md  pyproject.toml  run_ring_comparison.py  sanity.py  test_ringreactions.csv  train_ringreactions.csv
chytorch/: __init__.py
chytorch/zoo/rxnmap/: __init__.py
nora/: USAGE.md  datasets.py  nora.py  nora_eval.py  nora_optuna.py  run.py  run_ring_comparison.py  train.py
