[project]
name = "chytorch-rxnmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aim>=3.29.1",
    "chytorch>=1.65",
    "fire>=0.7.1",
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "jupyter>=1.1.1",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "pandas-stubs~=3.0.0",
    "pytorch-lightning>=2.6.1",
    "setuptools>=65.0.0",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
]
